# DD_mvp1

./: .env.example  .gitignore  README.md  alembic.ini  create_tables.py  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  generation.py  iep.py  progress.py  router.py  students.py  tasks.py  users.py
app/core/: __init__.py  constants.py  exceptions.py  security.py
app/models/: __init__.py  base.py  iep.py  organization.py  progress.py  student.py  task.py  user.py
app/schemas/: __init__.py  auth.py  generation.py  iep.py  progress.py  student.py  task.py  user.py
app/services/: auth.py  iep.py  progress.py  student.py  task.py  user.py
app/services/generation/: __init__.py  adapters.py  generator.py  llm_client.py  prompts.py
app/utils/: __init__.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/generator/: page.tsx
frontend/app/students/: page.tsx
frontend/components/layout/: sidebar.tsx  top-bar.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
tests/: conftest.py  test_api.py  test_auth.py  test_generation.py  test_models.py  test_services.py
